Created CO PO Table

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- Add any necessary CSS or other meta tags here -->
   </head>
+
   <body style="background-image: linear-gradient(to bottom, #f7fafc, #95b6c8)">
     <div>
       <!-- Course Information Form -->
@@ -161,9 +162,6 @@
       <div
         class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white"
       >
-        <div class="flex justify-center items-center mb-4">
-          <h1 class="font-bold uppercase text-3xl">CIE Marks Entry</h1>
-        </div>
 
         <div class="my-2 flex">
           <input
@@ -180,6 +178,12 @@
         </div>
       </div>
     </div>
+
+    <!-- Table 7 -->
+    <div
+      class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg"
+      id="gridView7"
+    ></div>
 
     <!-- Table 1 -->
     <div
