--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <div>
       <!-- Course Information Form -->
       <div class="flex justify-center items-center w-screen min-h-screen">
-        CIE
         <div class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white">
         <div class="flex justify-center items-center">
           <h1  class="font-bold uppercase text-5xl ">Course Information Form</h1>
@@ -36,42 +35,14 @@
           <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="totalPO" name="totalPO" required placeholder="12. Number of POs:" oninput="validateNumberInput(this)" />
           <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="totalPSO" name="totalPSO" required placeholder="13. Number PSO:" oninput="validateNumberInput(this)" />
           <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="TotalMarks" name="TotalMarks" required placeholder="14. SEE Marks:" oninput="validateNumberInput(this)" />
-=======
-        <div
-          class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white"
-        >
-          <div class="flex justify-center items-center">
-            <h1 class="font-bold uppercase text-5xl">
-              Course Information Form
-            </h1>
-          </div>
-          <form id="courseForm">
-            <div class="grid grid-cols-1 gap-5 md:grid-cols-2 mt-5">
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="programmeName" name="programmeName" required placeholder="1. Name of the Programme:" />
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="department" name="department" required placeholder="2. Department:" />
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="courseTeacher" name="courseTeacher" required placeholder="3. Name of the Course Teacher/Teachers:" />
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="courseCode" name="courseCode" required placeholder="4. Course Code:" />
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="semester" name="semester" required placeholder="5. Semester:" />
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="courseTitle" name="courseTitle" required placeholder="6. Course Title:" />
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="academicYear" name="academicYear" required placeholder="7. Academic Year:" />
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="batch" name="batch" required placeholder="8. Batch:" />
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="coThreshold" name="coThreshold" required placeholder="9. CO Threshold%:"/>
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="targetPercentage" name="targetPercentage" required placeholder="10. Institute Target Percentage:"/>
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="totalCO" name="totalCO" required placeholder="11. Number of COs:"/>
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="totalPO" name="totalPO" required placeholder="12. Number of POs:"/>
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="totalPSO" name="totalPSO" required placeholder="13. Number PSO:"/>
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="TotalMarks" name="TotalMarks" required placeholder="14. SEE Marks:"/>
-            </div>
-            <div class="my-2 w-1/2 lg:w-1/4 mx-auto">
-              <button class="uppercase text-sm font-bold tracking-wide bg-blue-900 text-gray-100 p-3 rounded-lg w-full focus:outline-none focus:shadow-outline" type="submit" >
-                Submit
-              </button>
-            </div>
-          </form>
-          
         </div>
-      </div>
-
+        <div class="my-2 w-1/2 lg:w-1/4 mx-auto">
+          <button class="uppercase text-sm font-bold tracking-wide bg-blue-900 text-gray-100 p-3 rounded-lg w-full 
+          focus:outline-none focus:shadow-outline" type="submit">Submit</button>
+        </div>
+      </form>
+    </div>
+  </div>
       <div id="displayInfo" class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg hidden" >
         <!-- Information will be displayed here -->
       </div>
