--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <div id="poInputsContainer" class="mt-0 p-0 border rounded-lg">
       <h3 class="font-semibold text-lg" id="poHeader" style="display: none">
-        PO Inputs0
+        PO Inputs
       </h3>
       <div id="poInputs">
         <!-- Placeholder for PO inputs -->
