--- a/index.html
+++ b/index.html
@@ -12,54 +12,82 @@
   </head>
 
   <body style="background-image: linear-gradient(to bottom, #f7fafc, #95b6c8)">
-    <div>
-      <!-- Course Information Form -->
-      <div class="flex justify-center items-center w-screen min-h-screen">
-        <div class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white">
-        <div class="flex justify-center items-center">
-          <h1  class="font-bold uppercase text-5xl ">Course Information Form</h1>
-        </div>
-      <form id="courseForm">
-        <div class="grid grid-cols-1 gap-5 md:grid-cols-2 mt-5">
-          <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="programmeName" name="programmeName" required placeholder="1. Name of the Programme:" oninput="validateTextInput(this)" />
-          <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="department" name="department" required  placeholder="2. Department:" oninput="validateTextInput(this)"  />
-          <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="courseTeacher" name="courseTeacher" required placeholder="3. Name of the Course Teacher/Teachers:" oninput="validateTextInput(this)" />
-          <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="courseCode" name="courseCode" required placeholder="4. Course Code:" oninput="validateNumberInput(this)" />
-          <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="semester" name="semester"  required placeholder="5. Semester:" oninput="validateNumberInput(this)" />
-          <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="courseTitle" name="courseTitle"  required placeholder="6. Course Title:" oninput="validateTextInput(this)"/>
-          <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="academicYear" name="academicYear"  required placeholder="7. Academic Year:" oninput="validateNumberInput(this)" />
-          <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="batch" name="batch" required placeholder="8. Batch:" oninput="validateNumberInput(this)"/>
-          <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="coThreshold" name="coThreshold" required placeholder="9. CO Threshold%:" oninput="validateNumberInput(this)" />
-          <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="targetPercentage" name="targetPercentage" required placeholder="10. Institute Target Percentage:"  oninput="validateNumberInput(this)"  />
-          <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="totalCO" name="totalCO" required placeholder="11. Number of COs:" oninput="validateNumberInput(this)" />
-          <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="totalPO" name="totalPO" required placeholder="12. Number of POs:" oninput="validateNumberInput(this)" />
-          <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="totalPSO" name="totalPSO" required placeholder="13. Number PSO:" oninput="validateNumberInput(this)" />
-          <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="TotalMarks" name="TotalMarks" required placeholder="14. SEE Marks:" oninput="validateNumberInput(this)" />
-        </div>
-        <div class="my-2 w-1/2 lg:w-1/4 mx-auto">
-          <button class="uppercase text-sm font-bold tracking-wide bg-blue-900 text-gray-100 p-3 rounded-lg w-full 
-          focus:outline-none focus:shadow-outline" type="submit">Submit</button>
-        </div>
-      </form>
-    </div>
+    <div class="flex justify-center items-center min-h-screen">
+      <div class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white">
+          <div class="flex justify-center items-center">
+              <h1 class="font-bold uppercase text-5xl">Course Information Form</h1>
+          </div>
+          <form id="courseForm">
+              <div class="grid gap-5 md:grid-cols-2 mt-5">
+                  <div>
+                      <label for="programmeName">1. Name of the Programme:</label>
+                      <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="programmeName" name="programmeName" required placeholder="Ex. BCA" oninput="validateTextInput(this)" />
+                  </div>
+                  <div>
+                      <label for="department">2. Department:</label>
+                      <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="department" name="department" required placeholder="Ex. Computer Application" oninput="validateTextInput(this)" />
+                  </div>
+                  <div>
+                      <label for="courseTeacher">3. Name of the Course Teacher/Teachers:</label>
+                      <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="courseTeacher" name="courseTeacher" required placeholder="Ex. Krishnarao Rane" oninput="validateTextInput(this)" />
+                  </div>
+                  <div>
+                      <label for="courseCode">4. Course Code:</label>
+                      <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="courseCode" name="courseCode" required placeholder="Ex. UCAD-103" oninput="validateNumberInput(this)" />
+                  </div>
+                  <div>
+                      <label for="semester">5. Semester:</label>
+                      <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="semester" name="semester" required placeholder="Ex. V" oninput="validateNumberInput(this)" />
+                  </div>
+                  <div>
+                      <label for="courseTitle">6. Course Title:</label>
+                      <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="courseTitle" name="courseTitle" required placeholder="Ex. Mobile Application Development" oninput="validateTextInput(this)" />
+                  </div>
+                  <div>
+                      <label for="academicYear">7. Academic Year:</label>
+                      <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="academicYear" name="academicYear" required placeholder="Ex. 2022-23" oninput="validateNumberInput(this)" />
+                  </div>
+                  <div>
+                      <label for="batch">8. Batch:</label>
+                      <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="batch" name="batch" required placeholder="Ex. 2022-23" oninput="validateNumberInput(this)" />
+                  </div>
+                  <div>
+                      <label for="coThreshold">9. CO Threshold%:</label>
+                      <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="coThreshold" name="coThreshold" required placeholder="Ex. 40" oninput="validateNumberInput(this)" />
+                  </div>
+                  <div>
+                      <label for="targetPercentage">10. Institute Target Percentage:</label>
+                      <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="targetPercentage" name="targetPercentage" required placeholder="Ex. 50" oninput="validateNumberInput(this)" />
+                  </div>
+                  <div>
+                      <label for="totalCO">11. Number of COs:</label>
+                      <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="totalCO" name="totalCO" required placeholder="Ex. 4" oninput="validateNumberInput(this)" />
+                  </div>
+                  <div>
+                      <label for="totalPO">12. Number of POs:</label>
+                      <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="totalPO" name="totalPO" required placeholder="Ex. 5" oninput="validateNumberInput(this)" />
+                  </div>
+                  <div>
+                      <label for="totalPSO">13. Number PSO:</label>
+                      <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="totalPSO" name="totalPSO" required placeholder="Ex. 3" oninput="validateNumberInput(this)" />
+                  </div>
+                  <div>
+                      <label for="TotalMarks">14. SEE Marks:</label>
+                      <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="TotalMarks" name="TotalMarks" required placeholder="Ex. 60" oninput="validateNumberInput(this)" />
+                  </div>
+              </div>
+              <div class="my-2 w-1/2 lg:w-1/4 mx-auto">
+                  <button class="uppercase text-sm font-bold tracking-wide bg-blue-900 text-gray-100 p-3 rounded-lg w-full focus:outline-none focus:shadow-outline" type="submit">Submit</button>
+              </div>
+          </form>
+      </div>
   </div>
       <div id="displayInfo" class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg hidden" >
         <!-- Information will be displayed here -->
       </div>
     </div>
 
-    <!-- ISA Mapping Form -->
-    <div>
-      <div class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white" >
-        <div class="my-2 flex">
-          <input type="file" id="fileInput" class="bg-gray-200 shadow-xl p-2 rounded-l-lg focus:outline-none flex-grow mr-4" />
-          <button id="loadButton" class="uppercase text-sm font-bold tracking-wide bg-blue-900 text-gray-100 p-3 rounded-r-lg focus:outline-none" >
-            Load Excel
-          </button>
-        </div>
-      </div>
-    </div>
-
+    <!------ Takes input for COs, POs, and PSOs-->
     <div id="poInputsContainer" class="mt-0 p-0 border rounded-lg">
       <h3 class="font-semibold text-lg" id="poHeader" style="display: none">
         PO Inputs
@@ -90,7 +118,17 @@
     </div>
     <div id="display" class="mt-4 p-4 bg-gray-100 rounded-lg hidden"></div>
     
-
+    <!-- ISA Mapping Form -->
+    <div>
+      <div class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white" >
+        <div class="my-2 flex">
+          <input type="file" id="fileInput" class="bg-gray-200 shadow-xl p-2 rounded-l-lg focus:outline-none flex-grow mr-4" />
+          <button id="loadButton" class="uppercase text-sm font-bold tracking-wide bg-blue-900 text-gray-100 p-3 rounded-r-lg focus:outline-none" >
+            Load Excel
+          </button>
+        </div>
+      </div>
+    </div>
 
     <!-- Table 7 -->
     <div class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg" id="gridView7" ></div>
