--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                   </div>
                   <div>
                       <label for="semester">5. Semester:</label>
-                      <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="semester" name="semester" required placeholder="Ex. V" oninput="validateNumberInput(this)" />
+                      <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="semester" name="semester" required placeholder="Ex. 5" oninput="validateNumberInput(this)" />
                   </div>
                   <div>
                       <label for="courseTitle">6. Course Title:</label>
@@ -130,25 +130,25 @@
       </div>
     </div>
 
-    <!-- Table 7 -->
+    <!-- Table 7  CO PO average-->
     <div class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg" id="gridView7" ></div>
 
-    <!-- Table 1 -->
+    <!-- Table 1 CIE Marks Entry-->
     <div class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg hidden" id="gridView1" ></div>
 
-    <!-- Table 2 -->
+    <!-- Table 2  CIE Marks Entry  -->
     <div class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg hidden" id="gridView2" ></div>
 
-    <!-- Table 3 -->
+    <!-- Table 3 SEE Marks Entry-->
     <div class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg hidden" id="gridView3" ></div>
 
-    <!-- Table 4 -->
+    <!-- Table 4 Feedback-->
     <div class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg hidden" id="gridView4" ></div>
 
-    <!-- Table 5 -->
+    <!-- Table 5 All tables average-->
     <div class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg hidden" id="gridView5" ></div>
 
-    <!-- Table 6 -->
+    <!-- Table 6  Level of Attainment-->
     <div class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg hidden" id="gridView6" ></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
