--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
 
     <div class="flex flex-col lg:flex-row mt-10">
-      <div id="PoInputs" class="w-full p-8 my-4 mx-8 rounded-2xl shadow-2xl bg-white hidden" >
+      <div id="PoInputs" class="w-full p-8 my-4 lg:my-4 lg:mx-8 rounded-2xl shadow-2xl bg-white hidden  >
         <div id="poInputsContainer">
           <div class="flex justify-center items-center">
             <h3 class="font-bold uppercase text-3xl" id="poHeader" style="display: none" >
@@ -101,7 +101,7 @@
         </div>
       </div>
 
-      <div id="COInputs" class="w-full p-8 my-4 mx-8 rounded-2xl shadow-2xl bg-white hidden" >
+      <div id="COInputs" class="w-full p-8 my-4 lg:my-4 lg:mx-8 rounded-2xl shadow-2xl bg-white hidden  >
         <div id="coInputsContainer">
           <div class="flex justify-center items-center">
             <h3 class="font-bold uppercase text-3xl" id="coHeader" style="display: none" >
@@ -114,7 +114,7 @@
         </div>
       </div>
 
-      <div id="PSOInputs" class="w-full p-8 my-4 mx-8 rounded-2xl shadow-2xl bg-white hidden" >
+      <div id="PSOInputs" class="w-full p-8 my-4 lg:my-4 lg:mx-8 rounded-2xl shadow-2xl bg-white hidden  >
         <div id="psoInputsContainer">
           <div class="flex justify-center items-center">
             <h3 class="font-bold uppercase text-3xl" id="psoHeader" style="display: none" >
