Added Label for putting new info and added new icon in img folder

--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
             Load Excel
           </button>
         </div>
+        <div><label>hello</label></div>
       </div>
     </div>
 
