edited information in excel upload div

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         <div>
           <label style="display: inline;">
               <img src="img/icons8-info-24.png" alt="Information" style="display: inline; vertical-align: middle;">
-              The Excel sheet should contain only three columns with the headings: "Sr. No," "Roll No," and "Name."
+              The Excel sheet should contain only three columns with the headings: "Sr. No," "Roll No," and "Name of the student."
           </label>
       </div>
     </div>
