--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white"
       >
         <div class="flex justify-center items-center">
-          <h1 class="font-bold uppercase text-5xl">Course Information Form</h1>
+          <h1 class="font-bold uppercase text-5xl">Course Details</h1>
         </div>
         <form id="courseForm">
           <div class="grid gap-5 md:grid-cols-2 mt-5">
