Added minor changes

--- a/index.html
+++ b/index.html
@@ -274,17 +274,18 @@
           </div>
         </div>
       </div>
+      <div class="flex justify-center">
+        <button
+          id="displayButton"
+          class="uppercase text-sm font-bold tracking-wide bg-blue-900 text-gray-100 p-3 rounded-lg w-max focus:outline-none focus:shadow-outline"
+          style="display: none"
+        >
+          Display Input
+        </button>
+      </div>
     </div>
 
-    <div class="flex justify-center">
-      <button
-        id="displayButton"
-        class="mt-4 p-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600"
-        style="display: none"
-      >
-        Display Input
-      </button>
-    </div>
+    
 
     <div id="display" class="mt-4 p-4 bg-gray-100 rounded-lg hidden"></div>
 
@@ -294,6 +295,8 @@
         id="ExcelInput"
         class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white hidden"
       >
+      <div>
+        <h1  class="font-bold uppercase text-3xl">Upload Student Details</h1></div>
         <div class="my-2 flex">
           <input
             type="file"
