Added Header logo and did minor changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <!-- Add any necessary CSS or other meta tags here -->
   </head>
 
-  <body style="background-image: linear-gradient(to bottom, #f7fafc, #95b6c8)">
+  <body>
+    <div class="flex justify-center">
+      <img src="img/LogoHeader.png" alt="DMCLogoHeader" class="w-1/2 mx-auto">
+    </div>
     <div class="flex justify-center items-center min-h-screen">
       <div
         class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white"
