--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <div class="flex justify-center">
       <img src="img/LogoHeader.png" alt="DMCLogoHeader" class="w-1/2 mx-auto">
     </div>
+    <div class="flex justify-center items-center my-8">
+      <h1 class="font-bold uppercase text-4xl text-black mb-4">Attainment Of Course & Program Outcome</h1>
+    </div>
     <div class="flex justify-center items-center min-h-screen">
       <div
         class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white"
