Modified semester div

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div>
               <label for="semester">5. Semester:</label>
               <select class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" id="semester" name="semester" required oninput="validateRomanNumeralInput(this)">
-                  <option value="" disabled selected>Select an option</option>
+                  <option value="" disabled selected>Select Semester</option>
                   <option value="I">I</option>
                   <option value="II">II</option>
                   <option value="III">III</option>
