Added number of students in the form

--- a/index.html
+++ b/index.html
@@ -117,15 +117,14 @@
               />
             </div>
             <div>
-              <label for="batch">8. Batch:</label>
+              <label for="totalStudents">8. Number of Students:</label>
               <input
                 class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
                 type="text"
-                id="batch"
-                name="batch"
+                id="totalStudents"
+                name="totalStudents"
                 required
-                placeholder="Ex. 2022-23"
-                onblur="validateYearRangeInput(this)"
+                placeholder="Ex. 60"
                 onkeydown="checkEnter(event)"
               />
             </div>
